<resources>
    <string name="app_name">Мир мамочек</string>
    <string name="catalog">Каталог</string>
    <string name="favorites">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="select">Применить</string>
    <string name="cost_from_hint">от</string>
    <string name="cost_to_hint">до</string>
    <string name="pass">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Войти</string>
    <string name="repeat_pass">Не помню пароль</string>
    <string name="register">Регистрация</string>
    <string name="your_name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="pass_repeat">Повториле пароль</string>
    <string name="exist_account">У меня есть аккаунт</string>
    <string name="submit_register">Зарегистрироваться</string>
    <string name="city">Город</string>
    <string name="metro">Метро</string>
    <string name="address">Адрес</string>
    <string name="save">Сохранить</string>
    <string name="change_profile">Редактировать профиль</string>
    <string name="add_product">Добавить товар</string>
    <string name="name">Название</string>
    <string name="state">Состояние</string>
    <string name="material">Материал</string>
    <string name="size">Размер</string>
    <string name="age">Возраст</string>
    <string name="category">Категория</string>
    <string name="cost">Цена</string>
    <string name="description">Описание</string>
    <string name="photo">Фото</string>
    <string name="true_delivery">Есть доставка</string>
    <string name="add_product_title">Добавление товара</string>
    <string name="seller">Продавец</string>
    <string name="call_to_seller">Связаться с продавцом</string>
    <string name="product">Товар</string>
    <string name="price">%s ₽</string>
    <string name="favorite_empty_text">Добавляйте товары в избранное, чтобы посмотреть или купить их позже</string>
    <string name="favorite_empty_title">В избранном пусто</string>
    <string name="field_not_valid">Поле не должно быть пустым</string>
    <string name="email_not_valid">Проверьте правильность написания email адреса</string>
    <string name="phone_not_valid">Проверьте правильность написания телефонного номера</string>
    <string name="pass_not_valid">Пароль должен содержать минимум 8 знаков</string>
    <string name="repeate_pess_not_valid">Введенные вами пароли не совпадают</string>
    <string name="email_is_busy">Данный email уже используется</string>
    <string name="surname">Фамилия</string>
    <string name="auth_bad_fields">Проверьте правильность вводимых данных</string>
    <string name="invalid_params">Неверные параметры</string>
    <string name="empty_my_product">В списке ваших товаров пусто</string>
    <string name="choose_load_photo">Выберете способ загрузки фото</string>
    <string name="no_upload_photo">Не удалось загрузить изображение</string>
    <string name="upload_photo">Загрузка фото</string>
    <string name="cancel">Отмена</string>
    <string name="success_add_product">Товар успешно добавлен</string>
    <string name="price_not_valid">Введите целую сумму</string>
    <string name="photo_not_valid">Добавтьте хотя бы одно фото</string>
    <string name="new_item">Новые</string>
    <string name="desc">По убыванию</string>
    <string name="asc">По возрастанию</string>
    <string name="delete">Удалить</string>
    <string name="babes">Младенцы</string>
    <string name="before_3">До 3-х лет</string>
    <string name="before_7">3 - 7 лет</string>
    <string name="before_18">Подростки</string>
    <string name="pregnant">Беременные</string>
    <string name="back">Назад</string>
    <string name="empty_product_list">Список товаров пуст</string>
    <string name="old">Старые</string>
    <string name="filter">Фильтр</string>
    <string name="clear">Сбросить</string>
    <string name="search_in_app">Искать в МирМамочек...</string>
    <plurals name="advertisement">
        <item quantity="zero">%s объявлений</item>
        <item quantity="one">%s объявление</item>
        <item quantity="two">%s объявления</item>
        <item quantity="few">%s объявлений</item>
        <item quantity="other">%s объявлений</item>
    </plurals>
</resources>